# GenericGISDisplay

./: CMakeLists.txt  README.md  build.sh  gps-map-viewer.pro  test_sender.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h  udpreceiver.cpp  udpreceiver.h
